apps/wikijs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: wikijs
  labels:
    app: wikijs
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: wikijs
