apps/wikijs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs
  namespace: wikijs
  # 使用集群默认 ingress controller（k3s/traefik）
spec:
  rules:
    - host: wiki.esp.edu.kg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wikijs
                port:
                  number: 3000
